--- a/buildImage/application.yml
+++ b/buildImage/application.yml
@@ -4,7 +4,7 @@ spring:
       repositories:
         enabled: true
   datasource:
-    url: jdbc:mysql://host.docker.internal:3306/event?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://mysql:3306/event?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
     username: event
     password: p@ss4event
     driver-class-name: com.mysql.cj.jdbc.Driver
